--- a/styles/components/work.css
+++ b/styles/components/work.css
@@ -25,7 +25,7 @@
 
 .work__img-wrapper::after {
   content: '';
-  background-color: rgba(79, 70, 229, 0.4);
+  background-color: rgba(79, 70, 229, 0.08);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -36,22 +36,26 @@
 }
 
 .work__img-wrapper:hover::after {
-  background-color: rgba(79, 70, 229, 0.3);
+  background-color: rgba(79, 70, 229, 0.1);
 }
 
 .work__project:not(:last-child) {
   margin-bottom: 5rem;
 }
 
+.work__project-description p{
+  color: var(--clr-slate600);
+}
+
 .work__project-description1 {
-  font-size: var(--size-sm);
+ 
   color: var(--clr-slate600);
   margin: 1rem 0;
 }
 
 .work__project-description2 {
-  font-size: var(--size-sm);
-  color: var(--clr-slate400);
+  
+  color: var(--clr-slate600);
   margin-bottom: 1rem;
 }
 
@@ -97,64 +101,8 @@
 /* sm */
 @media (min-width: 640px) {
   .work__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-      'image1 content1'
-      'content2 image2'
-      'image3 content3'
-      'content4 image4'
-      'image5 content5'
-      'content6 image6';
-    place-items: center;
-  }
-
-  .work__image1 {
-    grid-area: image1;
-  }
-
-  .work__image2 {
-    grid-area: image2;
-  }
-
-  .work__image3 {
-    grid-area: image3;
-  }
-
-  .work__image4 {
-    grid-area: image4;
-  }
-
-  .work__image5 {
-    grid-area: image5;
-  }
-
-  .work__image6 {
-    grid-area: image6;
-  }
-
-  .work__content1 {
-    grid-area: content1;
-  }
-
-  .work__content2 {
-    grid-area: content2;
-  }
-
-  .work__content3 {
-    grid-area: content3;
-  }
-
-  .work__content4 {
-    grid-area: content4;
-  }
-
-  .work__content5 {
-    grid-area: content5;
-  }
-
-  .work__content6 {
-    grid-area: content6;
+    display: flex;
+  
   }
 
   .work__project {
@@ -247,11 +195,11 @@
   }
 
   .work__project-description1 {
-    font-size: var(--size-lg);
+    font-size: var(--size-xl);
   }
 
   .work__project-description2 {
-    font-size: var(--size-lg);
+    font-size: var(--size-xl);
   }
 
   .work__project-btn {
